--- a/showcase/public/assets/styles/@hashicorp/themed-tokens/with-css-selectors/tokens.css
+++ b/showcase/public/assets/styles/@hashicorp/themed-tokens/with-css-selectors/tokens.css
@@ -58,7 +58,7 @@
   --token-breadcrumb-link-foreground-color-active: #161616;
   --token-breadcrumb-link-foreground-color-default: #0f62fe;
   --token-breadcrumb-link-foreground-color-hover: #0043ce;
-  --token-breadcrumb-truncation-content-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  --token-breadcrumb-truncation-menu-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   --token-breadcrumb-truncation-toggle-foreground-color-active: #161616;
   --token-breadcrumb-truncation-toggle-foreground-color-default: #0f62fe;
   --token-breadcrumb-truncation-toggle-foreground-color-hover: #0043ce;
@@ -419,8 +419,7 @@
     --token-breadcrumb-link-foreground-color-active: #161616;
     --token-breadcrumb-link-foreground-color-default: #0f62fe;
     --token-breadcrumb-link-foreground-color-hover: #0043ce;
-    --token-breadcrumb-truncation-content-box-shadow: 0 2px 6px
-      rgba(0, 0, 0, 0.3);
+    --token-breadcrumb-truncation-menu-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     --token-breadcrumb-truncation-toggle-foreground-color-active: #161616;
     --token-breadcrumb-truncation-toggle-foreground-color-default: #0f62fe;
     --token-breadcrumb-truncation-toggle-foreground-color-hover: #0043ce;
@@ -782,8 +781,7 @@
     --token-breadcrumb-link-foreground-color-active: #f4f4f4;
     --token-breadcrumb-link-foreground-color-default: #78a9ff;
     --token-breadcrumb-link-foreground-color-hover: #a6c8ff;
-    --token-breadcrumb-truncation-content-box-shadow: 0 2px 6px
-      rgba(0, 0, 0, 0.8);
+    --token-breadcrumb-truncation-menu-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
     --token-breadcrumb-truncation-toggle-foreground-color-active: #f4f4f4;
     --token-breadcrumb-truncation-toggle-foreground-color-default: #78a9ff;
     --token-breadcrumb-truncation-toggle-foreground-color-hover: #a6c8ff;
@@ -1144,7 +1142,7 @@
   --token-breadcrumb-link-foreground-color-active: #161616;
   --token-breadcrumb-link-foreground-color-default: #0f62fe;
   --token-breadcrumb-link-foreground-color-hover: #0043ce;
-  --token-breadcrumb-truncation-content-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  --token-breadcrumb-truncation-menu-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   --token-breadcrumb-truncation-toggle-foreground-color-active: #161616;
   --token-breadcrumb-truncation-toggle-foreground-color-default: #0f62fe;
   --token-breadcrumb-truncation-toggle-foreground-color-hover: #0043ce;
@@ -1504,7 +1502,7 @@
   --token-breadcrumb-link-foreground-color-active: #f4f4f4;
   --token-breadcrumb-link-foreground-color-default: #78a9ff;
   --token-breadcrumb-link-foreground-color-hover: #a6c8ff;
-  --token-breadcrumb-truncation-content-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
+  --token-breadcrumb-truncation-menu-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
   --token-breadcrumb-truncation-toggle-foreground-color-active: #f4f4f4;
   --token-breadcrumb-truncation-toggle-foreground-color-default: #78a9ff;
   --token-breadcrumb-truncation-toggle-foreground-color-hover: #a6c8ff;
